@@ -3,6 +3,7 @@
 	* library/demos/widget  Use unicode copyright sign, in stead
 	* library/demos/en.msg  of depending on translation.
 	* library/demos/nl.msg
+	* generic/tkMain.c:    Sync TK_ASCII_MAIN usage with tclMain.c
 
 2010-11-04  Don Porter  <dgp@users.sourceforge.net>
 
